--- a/pages/MainPage/main.html
+++ b/pages/MainPage/main.html
@@ -4,25 +4,35 @@
 	<meta charset='UTF-8'>
 	<title>Title</title>
 	<link rel='stylesheet' href='styles.css'>
-	<link rel='stylesheet' href='reset.css'>
+	<link rel='stylesheet' href='../../reset.css'>
 </head>
 
 <body>
 	<div class='parent'>
 		<div class = "column column-1">
-			<div class='container container-1'></div>
+			<div class='container container-1'>ауц</div>
 			<div class='container container-2'></div>
 			<div class='container container-3'></div>
+			<div class = 'button_container'>
+				<a href='../DecryptorPage/DescryptorPage.html' class='redirection-link'>ЧИТАТЬ ПОДРОБНЕЕ</a>
+			</div>
+
 		</div>
 		<div class = "column column-2">
 			<div class='container container-4'></div>
 			<div class='container container-5'></div>
 			<div class='container container-6'></div>
+			<div class='button_container'>
+				<a href='../MultiplexerPage/page2.html' class='redirection-link'>ЧИТАТЬ ПОДРОБНЕЕ</a>
+			</div>
 		</div>
 		<div class = "column column-3">
 			<div class='container container-7'></div>
 			<div class='container container-8'></div>
 			<div class='container container-9'></div>
+			<div class='button_container'>
+				<a href='../SummerPage/page3.html' class='redirection-link'>ЧИТАТЬ ПОДРОБНЕЕ</a>
+			</div>
 		</div>
 	</div>
 </body>
