--- a/pages/MainPage/main.html
+++ b/pages/MainPage/main.html
@@ -10,29 +10,64 @@
 <body>
 	<div class='parent'>
 		<div class = "column column-1">
-			<div class='container container-1'>ауц</div>
-			<div class='container container-2'></div>
-			<div class='container container-3'></div>
-			<div class = 'button_container'>
-				<a href='../DecryptorPage/DescryptorPage.html' class='redirection-link'>ЧИТАТЬ ПОДРОБНЕЕ</a>
+			<div class='container container-1'>ДЕШИФРАТОР</div>
+			<div class='container container-2'>
+				<div class='images'>
+					<img src='i.png'>
+				</div>
+
 			</div>
+			<div class='container container-3'>
+				<div class='text-deshifrator'>
+					Это устройство, которое преобразует двоичный
+					n-разрядный код в 2n-разрядный унитарный двоичный код.
+				</div>
+
+				<div class = 'button-container'>
+					<a href='../DecryptorPage/DescryptorPage.html' class='redirection-link'>▼</a>
+				</div>
+			</div>
+
 
 		</div>
 		<div class = "column column-2">
-			<div class='container container-4'></div>
-			<div class='container container-5'></div>
-			<div class='container container-6'></div>
-			<div class='button_container'>
-				<a href='../MultiplexerPage/page2.html' class='redirection-link'>ЧИТАТЬ ПОДРОБНЕЕ</a>
+			<div class='container container-4'>МУЛЬТИПЛЕКСОР</div>
+			<div class='container container-5'>
+				<div class='images'>
+					<img src='мультиплесор1.png'>
+				</div>
 			</div>
+			<div class='container container-6'>
+				<div class='multi'>
+					Устройство с n адресными входами
+					и 2n информационными входами, передающее данные с одного
+					из входов на выход
+					в зависимости
+					от адресного кода.
+				</div>
+				<div class = 'button-container'>
+					<a href='../DecryptorPage/DescryptorPage.html' class='redirection-link'>▼</a>
+				</div>
+			</div>
+
 		</div>
 		<div class = "column column-3">
-			<div class='container container-7'></div>
-			<div class='container container-8'></div>
-			<div class='container container-9'></div>
-			<div class='button_container'>
-				<a href='../SummerPage/page3.html' class='redirection-link'>ЧИТАТЬ ПОДРОБНЕЕ</a>
+			<div class='container container-7'>СУММАТОР</div>
+			<div class='container container-8'>
+				<div class='images'>
+					<img src='сумматор.png' width=70%>
+				</div>
 			</div>
+			<div class='container container-9'>
+				<div class='summator'>
+					Это схема для сложения цифровых или аналоговых сигналов. В цифровых системах
+					он выполняет сложение двоичных чисел.
+				</div>
+				<div class = 'button-container'>
+					<a href='../DecryptorPage/DescryptorPage.html' class='redirection-link'>▼</a>
+				</div>
+			</div>
+
 		</div>
 	</div>
 </body>
