finished all pages

--- a/pages/DecryptorPage/DescryptorPage.html
+++ b/pages/DecryptorPage/DescryptorPage.html
@@ -3,12 +3,45 @@
 <head>
 	<meta charset='UTF-8'>
 	<title>Title</title>
-	<link href='DescryptorPage.css'>
+	<link href='DescryptorPage.css' rel='stylesheet'>
 </head>
 <body>
 	<div class='link-to-main'>
 		<a href='../MainPage/main.html'>НА ГЛАВНУЮ</a>
-		fnjewfjewnjkfwjknjk
 	</div>
+
+	<div class='parent'>
+		<div class='characteristic'>
+			<div class='operations-of-descryptor'>
+				Дешифратор<br>
+				Принцип работы: Преобразует закодированные данные в исходный формат, используя алгоритмы, обратные шифратору. <br>
+				Основные методы:<br>
+				<br>
+				·Обратные логические операции.<br>
+				·Ключи дешифровки.<br>
+				·Статистический анализ.
+			</div>
+			<div class='types-of-descryptor'>
+				Виды: <br>
+				<br>
+				·Простой: логические схемы для электронных систем.<br>
+				·Криптографический: расшифровка с ключами (сетевая безопасность).<br>
+				·Гибридный: комбинирует методы для высокой надежности.<br>
+				·Программный: гибкость и обновление алгоритмов.
+			</div>
+			<div class='application'>
+				Применение: <br>
+				·Информационная безопасность. <br>
+				·Телекоммуникации. <br>
+				·Военная техника.
+			</div>
+		</div>
+
+		<div class='scheme'>
+			<img src='Descryptor-scheme.png'>
+		</div>
+
+	</div>
+
 </body>
 </html>
