--- a/pages/MainPage/main.html
+++ b/pages/MainPage/main.html
@@ -46,7 +46,7 @@
 					от адресного кода.
 				</div>
 				<div class = 'button-container'>
-					<a href='../DecryptorPage/DescryptorPage.html' class='redirection-link'>▼</a>
+					<a href='../MultiplexerPage/MultiplexerPage.html' class='redirection-link'>▼</a>
 				</div>
 			</div>
 
@@ -64,7 +64,7 @@
 					он выполняет сложение двоичных чисел.
 				</div>
 				<div class = 'button-container'>
-					<a href='../DecryptorPage/DescryptorPage.html' class='redirection-link'>▼</a>
+					<a href='../SummerPage/SummerPage.html' class='redirection-link'>▼</a>
 				</div>
 			</div>
 
